--- a/test.html
+++ b/test.html
@@ -5,226 +5,162 @@
         border: 1px solid black;
         border-collapse: collapse;
         font-size: 48px;
+        font-weight: normal;
     }
 
     table {
         width: 100%;
     }
 
-    th {
-        font-weight: normal;
+    td:not(:has(img)) {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 
-    td {
-        padding-top: 3.0rem;
-        padding-bottom: 3.0rem;
-        padding-left: 3.0rem;
-        padding-right: 3.0rem;
+    td:has(img) {
+        padding-top: 0rem;
+        padding-bottom: 0rem;
+        padding-left: 0rem;
+        padding-right: 0rem;
     }
 </style>
 <table>
     <thead>
         <tr class="header">
             <th style="text-align: center;">編號</th>
+            <th style="text-align: center;">組編號</th>
             <th style="text-align: center;">號數</th>
-            <th style="text-align: center;">圖示</th>
-            <th style="text-align: center;">長度(cm)</th>
-            <th style="text-align: center;">數量</th>
-            <th style="text-align: center;">重量(kg)</th>
+            <th style="text-align: center;">長A</th>
+            <th style="text-align: center;">型狀/長度B</th>
+            <th style="text-align: center;">長C</th>
+            <th style="text-align: center;">總長度</th>
+            <th style="text-align: center;">支數</th>
+            <th style="text-align: center;">重量</th>
             <th style="text-align: center;">備註</th>
         </tr>
     </thead>
     <tbody>
         <tr class="odd">
-            <td style="text-align: center;">155</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">20 480</td>
-            <td style="text-align: center;">500</td>
-            <td style="text-align: center;">6</td>
-            <td style="text-align: center;">30</td>
-            <td style="text-align: center;">增築</td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">156</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">20 420</td>
-            <td style="text-align: center;">440</td>
-            <td style="text-align: center;">6</td>
-            <td style="text-align: center;">26</td>
-            <td style="text-align: center;">增築</td>
-        </tr>
-        <tr class="odd">
-            <td colspan="7" style="text-align: center;">開口補強</td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">159</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 65 70</td>
-            <td style="text-align: center;">229</td>
+            <td style="text-align: center;">1</td>
+            <td style="text-align: center;">彎料</td>
+            <td style="text-align: center;">#5</td>
+            <td style="text-align: center;"></td>
+            <td style="text-align: center;">450</td>
+            <td style="text-align: center;"></td>
+            <td style="text-align: center;">480</td>
             <td style="text-align: center;">10</td>
-            <td style="text-align: center;">23</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">161</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 50 70</td>
-            <td style="text-align: center;">214</td>
-            <td style="text-align: center;">2517</td>
-            <td style="text-align: center;">5354</td>
+            <td style="text-align: center;">75</td>
             <td style="text-align: center;"></td>
         </tr>
         <tr class="even">
-            <td style="text-align: center;"></td>
+            <td style="text-align: center;">2</td>
+            <td style="text-align: center;">彎料</td>
             <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 45 70</td>
-            <td style="text-align: center;">209</td>
-            <td style="text-align: center;">132</td>
-            <td style="text-align: center;">274</td>
+            <td style="text-align: center;">80</td>
+            <td style="text-align: center;">80</td>
             <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">164</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 40 70</td>
-            <td style="text-align: center;">204</td>
-            <td style="text-align: center;">776</td>
-            <td style="text-align: center;">1574</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">165</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 40 65</td>
-            <td style="text-align: center;">194</td>
-            <td style="text-align: center;">55</td>
-            <td style="text-align: center;">106</td>
+            <td style="text-align: center;">340</td>
+            <td style="text-align: center;">720</td>
+            <td style="text-align: center;">2433</td>
             <td style="text-align: center;"></td>
         </tr>
         <tr class="odd">
-            <td style="text-align: center;">167</td>
+            <td style="text-align: center;">3</td>
+            <td style="text-align: center;">彎料</td>
             <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 30 65</td>
-            <td style="text-align: center;">184</td>
-            <td style="text-align: center;">57</td>
-            <td style="text-align: center;">104</td>
+            <td style="text-align: center;">65</td>
+            <td style="text-align: center;">80</td>
             <td style="text-align: center;"></td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">168</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 30 60</td>
-            <td style="text-align: center;">174</td>
-            <td style="text-align: center;">962</td>
-            <td style="text-align: center;">1664</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">169</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 25 60</td>
-            <td style="text-align: center;">169</td>
-            <td style="text-align: center;">110</td>
-            <td style="text-align: center;">185</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">170</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 50 40</td>
-            <td style="text-align: center;">154</td>
-            <td style="text-align: center;">187</td>
-            <td style="text-align: center;">286</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">171</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 45 40</td>
-            <td style="text-align: center;">149</td>
-            <td style="text-align: center;">22</td>
-            <td style="text-align: center;">33</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">172</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 21 50</td>
-            <td style="text-align: center;">166</td>
-            <td style="text-align: center;">111</td>
-            <td style="text-align: center;">183</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">173</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">180° 12 180° 30 40</td>
-            <td style="text-align: center;">134</td>
-            <td style="text-align: center;">20</td>
-            <td style="text-align: center;">27</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">174</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">135° 80 90° 12 12</td>
-            <td style="text-align: center;">104</td>
-            <td style="text-align: center;">11</td>
-            <td style="text-align: center;">11</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">175</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">135° 65 90° 12 12</td>
-            <td style="text-align: center;">89</td>
+            <td style="text-align: center;">310</td>
             <td style="text-align: center;">10</td>
+            <td style="text-align: center;">31</td>
+            <td style="text-align: center;"></td>
+        </tr>
+        <tr class="even">
+            <td style="text-align: center;">4</td>
+            <td style="text-align: center;">彎料</td>
+            <td style="text-align: center;">#4</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">81</td>
+            <td style="text-align: center;">12</td>
+            <td style="text-align: center;">105</td>
+            <td style="text-align: center;">2800</td>
+            <td style="text-align: center;">2922</td>
+            <td style="text-align: center;"></td>
+        </tr>
+        <tr class="odd">
+            <td style="text-align: center;">5</td>
+            <td style="text-align: center;">彎料</td>
+            <td style="text-align: center;">#4</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">81</td>
+            <td style="text-align: center;">12</td>
+            <td style="text-align: center;">105</td>
+            <td style="text-align: center;">2800</td>
+            <td style="text-align: center;">2922</td>
+            <td style="text-align: center;"></td>
+        </tr>
+        <tr class="even">
+            <td style="text-align: center;">6</td>
+            <td style="text-align: center;">彎料</td>
+            <td style="text-align: center;">#4</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">81</td>
+            <td style="text-align: center;">12</td>
+            <td style="text-align: center;">105</td>
+            <td style="text-align: center;">2800</td>
+            <td style="text-align: center;">2922</td>
+            <td style="text-align: center;"></td>
+        </tr>
+        <tr class="odd">
+            <td style="text-align: center;">7</td>
+            <td style="text-align: center;">彎料</td>
+            <td style="text-align: center;">#4</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">81</td>
+            <td style="text-align: center;">12</td>
+            <td style="text-align: center;">105</td>
+            <td style="text-align: center;">2800</td>
+            <td style="text-align: center;">2922</td>
+            <td style="text-align: center;"></td>
+        </tr>
+        <tr class="even">
+            <td style="text-align: center;">8</td>
+            <td style="text-align: center;">彎料</td>
+            <td style="text-align: center;">#4</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">81</td>
+            <td style="text-align: center;">12</td>
+            <td style="text-align: center;">105</td>
+            <td style="text-align: center;">2800</td>
+            <td style="text-align: center;">2922</td>
+            <td style="text-align: center;"></td>
+        </tr>
+        <tr class="odd">
             <td style="text-align: center;">9</td>
+            <td style="text-align: center;">彎料</td>
+            <td style="text-align: center;">#4</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">81</td>
+            <td style="text-align: center;">12</td>
+            <td style="text-align: center;">105</td>
+            <td style="text-align: center;">2800</td>
+            <td style="text-align: center;">2922</td>
             <td style="text-align: center;"></td>
         </tr>
         <tr class="even">
-            <td style="text-align: center;">177</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">彎料</td>
             <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">135° 50 90° 12 12</td>
-            <td style="text-align: center;">74</td>
-            <td style="text-align: center;">2829</td>
-            <td style="text-align: center;">2081</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">179</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">135° 45 90° 12 12</td>
-            <td style="text-align: center;">69</td>
-            <td style="text-align: center;">132</td>
-            <td style="text-align: center;">91</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">180</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">135° 40 90° 12 12</td>
-            <td style="text-align: center;">64</td>
-            <td style="text-align: center;">581</td>
-            <td style="text-align: center;">370</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="odd">
-            <td style="text-align: center;">181</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">135° 30 90° 12 12</td>
-            <td style="text-align: center;">54</td>
-            <td style="text-align: center;">1039</td>
-            <td style="text-align: center;">558</td>
-            <td style="text-align: center;"></td>
-        </tr>
-        <tr class="even">
-            <td style="text-align: center;">182</td>
-            <td style="text-align: center;">#4</td>
-            <td style="text-align: center;">135° 25 90° 12 12</td>
-            <td style="text-align: center;">49</td>
-            <td style="text-align: center;">110</td>
-            <td style="text-align: center;">54</td>
+            <td style="text-align: center;">10</td>
+            <td style="text-align: center;">81</td>
+            <td style="text-align: center;">12</td>
+            <td style="text-align: center;">105</td>
+            <td style="text-align: center;">2800</td>
+            <td style="text-align: center;"><img src="D:/Dprogram/latex-table-generator/steels/steel.png" alt="image" />
+            </td>
             <td style="text-align: center;"></td>
         </tr>
     </tbody>
